--- a/INDEX.html
+++ b/INDEX.html
@@ -8,7 +8,7 @@
 		</head>
 		<nav>
 		   <ul>
-			<li><a href="INDEX1.html">Circuitos</a>
+			<li><a href="INDEX.html">Circuitos</a>
 			<li><a href="INDEX2.html">Flora y fauna</a>
 			<li><a href="INDEX3.html">Actividades y precios</a>
 		</ul>
@@ -18,7 +18,7 @@
 
 		<h1><center><p>Perito Moreno</p></center>
 		<center><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTR5TjnDBhe-FWhN6VwNO-ZJKOGmJyg0I3-6g&s"></center>
-		<h2><center><p>Circuitos</p></center>
+		<h2><center><p>Circuitos</p></center></h2>
 			<p>Dirección: Bosque Patagónico, Santa Cruz</p>
         <p>Coordenadas: 47°48′41″S 72°15′02″O﻿ / ﻿-47.81138889, -72.25055556</p>
         <p>a 220 kilómetros de la localidad más cercana (Gob. Gregores)
@@ -28,11 +28,12 @@
 <p>El parque cuenta con 10 refugios, domos y zonas de acampe agreste distribuidas en tres áreas. Se recomienda realizar la reserva con mínimo una semana de antelación, ya que por fuera de los servicios brindados por el parque nacional, el área sólo dispone de dos estancias turísticas con servicio de alojamiento.</p>
  <p>Es uno de los más agrestes de la Argentina. Posee ocho lagos de tonalidades turquesa, esmeralda y gris, interconectados entre sí —a excepción de uno— por ríos caudalosos.
 circuitos:</p>
-<p><li>Península Belgrano: son 16 km que recorren de forma panorámica la extensa Península Belgrano que se introduce en su lago homónimo de aguas turquesas. A lo largo del recorrido hay vistas panorámicas del Río Volcán, el Cerro San Lorenzo y el Cerro Mié. Este circuito toma unas cuatro a seis horas de caminata y posee cuatro refugios en distintos puntos del recorrido (Caleta Huala, Archipiélago, Dos Bahías y Playa Quetro). Comienza en el istmo donde se encuentra el estacionamiento.</li></p>
-<p><li>Lago Azara: son 52 km que transicionan desde la estepa a los bosques de lengas hasta llegar al mítico y turquesa Lago Azara. El primer trayecto de 13 km transcurre entre el refugio René Negro y el refugio Tucúquere, bordeando el pie de monte del puntiagudo e imponente Cerro Mié. Desde Tucúquere se abre una horqueta hacia el sur para alcanzar, en 15 km, el refugio Azara, y a unos metros, se puede visitar la Cascada del Azara. Luego el sendero bordea el brazo final del Lago Belgrano a lo largo de 8 km, hasta encontrar el refugio La Angostura, restando 10 km para reencontrarse con la horqueta del refugio Tucúquere. Este circuito empieza en el estacionamiento del mirador Lago Belgrano.
-</li></p>
-<p><li>Cerro San Lorenzo y Valle del Río Lácteo: este circuito conecta el refugio Gilberto con el Kris y Doug Tomkins, a lo largo de 11 km, bordeando el río Lácteo. Este impactante valle glaciar desemboca en la Laguna de los Témpanos, a la cual se puede llegar después de 5 km más de caminata, con un vadeo de por medio. En ella, se estará al pie del cerro más alto de la provincia, el San Lorenzo, de 3706 msnm, con glaciares colgantes. Se recomienda hacer base en el área del refugio Kris y Doug Tomkins que, además, ofrece domos y áreas de acampe para acceder a la Laguna de los Témpanos y luego regresar al estacionamiento desandando el camino del Valle del Río Lácteo. Este circuito está en la zona norte del parque nacional, a 20 km del Centro de Informes, cerca del destacamento El Rincón.</li></p></h2>
+<p>Península Belgrano: son 16 km que recorren de forma panorámica la extensa Península Belgrano que se introduce en su lago homónimo de aguas turquesas. A lo largo del recorrido hay vistas panorámicas del Río Volcán, el Cerro San Lorenzo y el Cerro Mié. Este circuito toma unas cuatro a seis horas de caminata y posee cuatro refugios en distintos puntos del recorrido (Caleta Huala, Archipiélago, Dos Bahías y Playa Quetro). Comienza en el istmo donde se encuentra el estacionamiento.</li></p>
+Lago Azara: son 52 km que transicionan desde la estepa a los bosques de lengas hasta llegar al mítico y turquesa Lago Azara. El primer trayecto de 13 km transcurre entre el refugio René Negro y el refugio Tucúquere, bordeando el pie de monte del puntiagudo e imponente Cerro Mié. Desde Tucúquere se abre una horqueta hacia el sur para alcanzar, en 15 km, el refugio Azara, y a unos metros, se puede visitar la Cascada del Azara. Luego el sendero bordea el brazo final del Lago Belgrano a lo largo de 8 km, hasta encontrar el refugio La Angostura, restando 10 km para reencontrarse con la horqueta del refugio Tucúquere. Este circuito empieza en el estacionamiento del mirador Lago Belgrano.
+</p>
+<p>Cerro San Lorenzo y Valle del Río Lácteo: este circuito conecta el refugio Gilberto con el Kris y Doug Tomkins, a lo largo de 11 km, bordeando el río Lácteo. Este impactante valle glaciar desemboca en la Laguna de los Témpanos, a la cual se puede llegar después de 5 km más de caminata, con un vadeo de por medio. En ella, se estará al pie del cerro más alto de la provincia, el San Lorenzo, de 3706 msnm, con glaciares colgantes. Se recomienda hacer base en el área del refugio Kris y Doug Tomkins que, además, ofrece domos y áreas de acampe para acceder a la Laguna de los Témpanos y luego regresar al estacionamiento desandando el camino del Valle del Río Lácteo. Este circuito está en la zona norte del parque nacional, a 20 km del Centro de Informes, cerca del destacamento El Rincón.</p>
 
 
 		</body>
+
 		</html>
