--- a/INDEX2.html
+++ b/INDEX2.html
@@ -10,7 +10,7 @@
 		<body>
 			<nav>
 		   <ul>
-			<li><a href="INDEX1.html">Circuitos</a>
+			<li><a href="INDEX.html">Circuitos</a>
 			<li><a href="INDEX2X.html">Flora y fauna</a>
 			<li><a href="INDEX3.html">Actividades y precios</a>
 		</ul>
@@ -39,4 +39,5 @@
 			
 		</p></h2>
 		</body>
+
 		</html>
