--- a/INDEX3.html
+++ b/INDEX3.html
@@ -10,7 +10,7 @@
 	<body>
 		<nav>
 		   <ul>
-			<li><a href="INDEX1.html">Circuitos</a>
+			<li><a href="INDEX.html">Circuitos</a>
 			<li><a href="INDEX2.html">Flora y fauna</a>
 			<li><a href="INDEX3.html">Actividades y precios</a>
 		</ul>
@@ -54,4 +54,5 @@ No deberán abonar derechos de acceso a las áreas protegidas las siguientes per
 <p>Veteranos de Guerra de Malvinas aplica ex soldados conscriptos que participaron en las acciones bélicas desarrolladas en el Atlántico Sur entre el 2 de abril y el 14 de junio de 1982, y se acredita mediante presentación de DNI con la leyenda correspondiente o con Certificado Único de Veteranos de Guerra de Malvinas.</p>
 
 	</body>
+
 	</html>
